--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kakao_cloud_portfolio",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "start": "webpack serve --mode development --open",
     "build": "webpack --mode production",
@@ -22,6 +22,7 @@
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.13.0",
     "@jest/types": "^26.6.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -31,6 +32,7 @@
     "babel-loader": "^8.2.2",
     "chart.js": "^2.9.4",
     "css-loader": "^5.1.2",
+    "error-overlay-webpack-plugin": "^0.4.2",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
