--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@types/react": "^17.0.3",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^17.0.2",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
