--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@jest/types": "^26.6.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
+    "@toast-ui/react-chart": "^4.1.4",
     "@types/react": "^17.0.3",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^17.0.2",
@@ -36,19 +37,19 @@
     "css-loader": "^5.1.2",
     "error-overlay-webpack-plugin": "^0.4.2",
     "html-loader": "^2.1.2",
-    "html-webpack-plugin": "^5.3.1",
+    "html-webpack-plugin": "4",
     "jest": "^26.6.3",
     "jest-config": "^26.6.3",
-    "mini-css-extract-plugin": "^1.3.9",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "source-map-loader": "^2.0.1",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3",
-    "webpack": "^5.24.4",
+    "webpack": "^4.44.2",
     "webpack-cli": "^4.5.0"
   },
   "devDependencies": {
