--- a/package.json
+++ b/package.json
@@ -29,11 +29,10 @@
     "@testing-library/react": "^11.2.5",
     "@toast-ui/react-chart": "^4.1.4",
     "@types/react": "^17.0.3",
-    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^17.0.2",
+    "axios": "^0.21.1",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
-    "chart.js": "^2.9.4",
     "css-loader": "^5.1.2",
     "error-overlay-webpack-plugin": "^0.4.2",
     "html-loader": "^2.1.2",
@@ -42,7 +41,6 @@
     "jest-config": "^26.6.3",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
-    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "source-map-loader": "^2.0.1",
     "style-loader": "^2.0.0",
