--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
     "@jest/types": "^26.6.2",
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@types/react": "^17.0.3",
@@ -38,10 +39,13 @@
     "html-webpack-plugin": "4",
     "jest": "^26.6.3",
     "jest-config": "^26.6.3",
+    "moment": "^2.29.1",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-charts": "^3.0.15",
+    "react-use-websocket": "^2.5.0",
+    "redux": "^4.0.5",
     "source-map-loader": "^2.0.1",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.17",
