--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@jest/types": "^26.6.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
+    "@toast-ui/chart": "^4.1.4",
+    "@toast-ui/react-chart": "^4.1.4",
     "@types/react": "^17.0.3",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^17.0.2",
