--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@toast-ui/react-chart": "^4.1.4",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
@@ -50,6 +51,7 @@
     "redux": "^4.0.5",
     "source-map-loader": "^2.0.1",
     "style-loader": "^2.0.0",
+    "styled-components": "^5.2.1",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3",
