--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.1.2",
     "error-overlay-webpack-plugin": "^0.4.2",
+    "eslint-import-resolver-alias": "^1.1.2",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "4",
     "jest": "^26.6.3",
