--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@toast-ui/react-chart": "^4.1.4",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "@types/react-redux": "^7.1.16",
     "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
     "babel-jest": "^26.6.3",
@@ -48,6 +49,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-charts": "^3.0.15",
+    "react-redux": "^7.2.2",
     "react-use-websocket": "^2.5.0",
     "redux": "^4.0.5",
     "source-map-loader": "^2.0.1",
