--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "css-loader": "^5.1.2",
     "error-overlay-webpack-plugin": "^0.4.2",
     "eslint-import-resolver-alias": "^1.1.2",
+    "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "4",
     "jest": "^26.6.3",
@@ -57,7 +58,9 @@
     "styled-components": "^5.2.1",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
+    "ttf-loader": "^1.0.2",
     "typescript": "^4.2.3",
+    "url-loader": "^4.1.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.5.0"
   },
