--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-charts": "^3.0.15",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.2.2",
     "react-use-websocket": "^2.5.0",
     "redux": "^4.0.5",
